[gd_scene load_steps=6 format=3 uid="uid://b2xxl7dr176sy"]

[ext_resource type="Theme" uid="uid://63u8edwr4kjv" path="res://resources/ui_theme.tres" id="1_kxoem"]
[ext_resource type="Script" path="res://scenes/scoring_label/scoring_label.gd" id="2_dabpu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_svb4p"]

[sub_resource type="Animation" id="Animation_4rp2t"]
resource_name = "score_fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.93187, 0.210224),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0t441"]
_data = {
"score_fade_out": SubResource("Animation_4rp2t")
}

[node name="ScoringLabel" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_kxoem")
theme_type_variation = &"small"
script = ExtResource("2_dabpu")
score_amount_text = null
score_name_text = null

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 176.0
offset_bottom = 44.0

[node name="ScoreText" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_kxoem")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "+1000
"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_svb4p")

[node name="ScoreName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_kxoem")
theme_type_variation = &"TooltipLabel"
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "6 of a kind"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0t441")
}
